Fixed wrong colour ref in abbr tags and added fonts heading

--- a/css/style.scss
+++ b/css/style.scss
@@ -242,7 +242,7 @@ code {
 
 abbr {
     text-decoration: {
-        color: var(--color-neutral-7-5);
+        color: var(--color-neutral-75);
         style: wavy;
     }
     cursor: help;
