--- a/css/theme-default.scss
+++ b/css/theme-default.scss
@@ -11,7 +11,7 @@ footer {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: var(--color-neutral-0);
-        color: var(--color-neutral-5);
+        color: var(--color-neutral-75);
     }
 
     header {
@@ -29,6 +29,10 @@ footer {
         p & {
             background-color: var(--color-neutral-1);
         }
+    }
+
+    abbr {
+        text-decoration-color: var(--color-neutral-3);
     }
 
     footer {
